* Update locales. * Add ability to execute additional scripts when the SSH subsystem mkconf skript is executed. Thanks to Ilya Kogan for the contribution.

--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-06 14:50+0100\n"
-"PO-Revision-Date: 2015-01-25 06:01+0000\n"
+"PO-Revision-Date: 2015-04-05 12:44+0000\n"
 "Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -967,7 +967,7 @@ msgid ""
 "shared folder content will be permanently removed and cannot be recovered. "
 "Select 'No' to delete the shared folder configuration only or 'Cancel' to "
 "abort."
-msgstr "确认要以递归方式删除共享文件内容吗？该共享文件的内容将永久删除且无法恢复，选择'No'仅删除共享文件夹配置或者'Cancel'中止操作。"
+msgstr "确认要以递归方式删除共享文件内容吗？该共享文件的内容将永久删除且无法恢复，选择'否'仅删除共享文件夹配置或者'取消'中止操作。"
 
 msgid "Domain name"
 msgstr "域名"
@@ -2383,7 +2383,7 @@ msgid ""
 msgstr "详情请看 <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>手册</a> 。"
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
-msgstr "请选择擦除设备的方式或者选择“Cancel”中止。"
+msgstr "请选择擦除设备的方式或者选择“取消”中止。"
 
 msgid "Please first select a volume."
 msgstr "请选择一个卷。"
