--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,8 @@
 openmediavault (2.0.3) stable; urgency=low
 
   * Modify Javascript code to fix EXTJS-13864.
+  * Add ability to execute additional scripts when the SSH subsystem
+    mkconf skript is executed. Thanks to Ilya Kogan for the contribution.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 17 Mar 2015 09:08:29 +0100
 
