--- a/deb/openmediavault-ldap/debian/changelog
+++ b/deb/openmediavault-ldap/debian/changelog
@@ -1,3 +1,13 @@
+openmediavault-ldap (2.0) stable; urgency=low
+
+  * Update locales.
+  * Added option to disable PAM while keeping NSS enabled. Thanks to Ilya
+    Kogan for this contribution.
+  * Added option to add extra settings to /etc/ldap/ldap.conf. Thanks to
+    Ilya Kogan for this contribution.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Apr 2015 13:55:33 +0200
+
 openmediavault-ldap (1.2) stable; urgency=low
 
   * Update locales.
