--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/da_DA/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/da_DA/openmediavault-ldap.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2013-06-17 06:35+0000\n"
-"Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
+"POT-Creation-Date: 2015-04-06 14:07+0200\n"
+"PO-Revision-Date: 2015-04-06 12:07+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,6 +27,18 @@ msgstr "Biblioteks Tjeneste"
 msgid "Enable"
 msgstr "Aktiver"
 
+msgid "Enable PAM"
+msgstr ""
+
+msgid "Enable SSL/TLS"
+msgstr ""
+
+msgid "Enable secure connection."
+msgstr ""
+
+msgid "Extra client options"
+msgstr ""
+
 msgid "Extra options"
 msgstr "Ekstra valgmuligheder"
 
@@ -41,6 +53,11 @@ msgstr "Vært"
 
 msgid "Password"
 msgstr "Adgangskode"
+
+msgid ""
+"Please check the <a href='http://linux.die.net/man/5/ldap.conf' "
+"target='_blank'>manual page</a> for more details."
+msgstr ""
 
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/nss_ldap' "
@@ -77,6 +94,11 @@ msgstr "Angiver brugerens endelse, f.eks. 'ou=Brugere'."
 
 msgid "The FQDN or IP address of the server."
 msgstr "FQDNén eller IP adressen på serveren"
+
+msgid ""
+"Use LDAP for authentication system-wide along with other authentication "
+"sources."
+msgstr ""
 
 msgid "Users suffix"
 msgstr "Brugers endelse"
