--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/de_DE/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/de_DE/openmediavault-ldap.po
@@ -5,15 +5,15 @@
 # Translators:
 # bejonwe <bejonwe@gmx.net>, 2012
 # Stephan Steiner, 2014
-# Volker <votdev@gmx.de>, 2013-2014
+# Volker <votdev@gmx.de>, 2013-2015
 # Volker <votdev@gmx.de>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-05-19 19:17+0200\n"
-"PO-Revision-Date: 2014-08-14 11:22+0000\n"
-"Last-Translator: Stephan Steiner\n"
+"POT-Creation-Date: 2015-04-06 14:07+0200\n"
+"PO-Revision-Date: 2015-04-06 12:15+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,6 +30,18 @@ msgstr "Verzeichnisdienst"
 msgid "Enable"
 msgstr "Aktivieren"
 
+msgid "Enable PAM"
+msgstr "PAM aktivieren"
+
+msgid "Enable SSL/TLS"
+msgstr "SSL/TLS aktivieren"
+
+msgid "Enable secure connection."
+msgstr "Aktiviere sichere Verbindung."
+
+msgid "Extra client options"
+msgstr "Erweiterte Client-Optionen"
+
 msgid "Extra options"
 msgstr "Erweiterte Optionen"
 
@@ -44,6 +56,11 @@ msgstr "Host"
 
 msgid "Password"
 msgstr "Passwort"
+
+msgid ""
+"Please check the <a href='http://linux.die.net/man/5/ldap.conf' "
+"target='_blank'>manual page</a> for more details."
+msgstr "Bitte die <a href='http://linux.die.net/man/5/ldap.conf' target='_blank'>Hilfeseiten</a> für weitere Details lesen."
 
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/nss_ldap' "
@@ -80,6 +97,11 @@ msgstr "Legt den Benutzersuffix fest (z.B. \"ou=Users\")."
 
 msgid "The FQDN or IP address of the server."
 msgstr "Die FQDN oder IP-Adresse des Servers."
+
+msgid ""
+"Use LDAP for authentication system-wide along with other authentication "
+"sources."
+msgstr "Verwende LDAP zusammen mit anderen Authentifizierungsquellen für die systemweit Authentifizierung."
 
 msgid "Users suffix"
 msgstr "Benutzersuffix"
