--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (2.0.4) stable; urgency=low
 
   * Adapt WebGUI to Sencha ExtJS 5.
   * Mantis 0001295: Network interfaces window with DNS entries.
+  * Mantis 0001299: Add KVM VirtIO storage backend.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Apr 2015 16:58:08 +0200
 
