Mantis 0000022: Support VLAN.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (2.0.4) stable; urgency=low
 
   * Adapt WebGUI to Sencha ExtJS 5.
+  * Mantis 0000022: Support VLAN.
   * Mantis 0001295: Network interfaces window with DNS entries.
   * Mantis 0001299: Add KVM VirtIO storage backend.
 
