--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (1.18) stable; urgency=low
+
+  * Mantis 0001302: Increase "wipe" size to also remove other file
+    systems from disks.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 10 Apr 2015 8:43:52 +0200
+
 openmediavault (1.17) stable; urgency=low
 
   * Update locales.
