* Skip filesystem when it is not possible to get the storage device. This may happen for filesystems that are located on storage devices that are not supported via a storage backend implementation, e.g. /dev/sr0, AUFS, ... * Fix EtxJS5 issue.

--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (2.0) stable; urgency=low
+
+  * Adapt WebGUI to Sencha ExtJS 5.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 13 Apr 2015 18:26:31 +0200
+
 openmediavault-usbbackup (1.4) stable; urgency=low
 
   * Use the filesystem backend to get the implementation class.
