Support Docker network interfaces like vethXXXX, see http://forums.openmediavault.org/index.php/Thread/7903-Error-when-viewing-GUI-Network-Interface/?postID=73022#post73022.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (2.0.4) stable; urgency=low
 
   * Adapt WebGUI to Sencha ExtJS 5.
+  * Introduce network interface backend API.
   * Mantis 0000022: Support VLAN.
   * Mantis 0001288: Create a backup of /etc/network/interfaces during
     omv-initsystem.
